--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -6,6 +6,12 @@
     
 }
 
+@keyframes expandmobile {
+    from {width: 0;}
+    to {width: 8rem}
+    
+}
+
 .title {
     text-decoration: none;
     color: white;
@@ -15,7 +21,7 @@
 }
 
 .header {
-    width: 96%;
+    width: 100%;
     padding: 0% 2%;
     height: 15vh;
     background-color:black;
@@ -24,6 +30,7 @@
     justify-content: space-between;
     align-items: center;
     font-size: 2rem;
+    box-sizing: border-box;
 }
 
 .header div {
@@ -68,6 +75,9 @@ svg {
 }
 
 @media screen and (max-width: 600px) {
+    .header {
+        width: 100vw;
+    }
     .logo {
         display: none;
     }
@@ -76,6 +86,10 @@ svg {
         position: absolute;
         left: 36%;
         font-size: 25px;
+    }
+
+    .input {
+        animation: expandmobile 500ms forwards;
     }
 }
 
