--- a/src/components/advertising/advertising.module.css
+++ b/src/components/advertising/advertising.module.css
@@ -1,4 +1,16 @@
 .banner {
-    width: 100%;
+    width: 100vw;
+    margin-top: 2rem;
     border: 1px solid black;
+}
+
+.banner img {
+    width: 100%;
+}
+
+@media screen and (max-width: 750px) {
+    .banner {
+        width: 105vw;
+        overflow-x: hidden;
+    }
 }
