--- a/src/home.module.css
+++ b/src/home.module.css
@@ -3,6 +3,7 @@
     src: url(./assets/fonts/Montserrat-VariableFont_wght.ttf);
 }
 
-body {
+body, html {
 font-family: "Montserrat", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+width: 100vw;
 }
